--- a/app/components/paperShow/paperShow.scss
+++ b/app/components/paperShow/paperShow.scss
@@ -114,7 +114,7 @@
   top: $navbar_height;
   left: 0;
   right: 0;
-  z-index: 1250;
+  z-index: 99;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.05);
   background-color: white;
   transition: box-shadow background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
